feat: Add Playwright for automated browser testing
- Installed @playwright/test with Chromium
- Added test scripts: npm test, npm run test:ui, npm run test:headed
- Created tests for login, signup, navigation, and protected routes
- 11 tests covering core app functionality

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,9 @@ npm-debug.log*
 
 # Vite
 vite.config.ts.timestamp-*
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
